# alaba-honeypot

./: .gitignore  README.md  TESTING.md  pyproject.toml
src/honeypot/: __init__.py  db.py  geoip.py  run.py  ssh_server.py
src/honeypot/web/: __init__.py
src/honeypot/web/templates/: dashboard.html  login.html
