[project]
name = "honeypot"
version = "0.1.0"
description = "SSH + web honeypot with geolocation enrichment and a live Chart.js dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.4",
    "flask>=3.0",
    "httpx>=0.27",
]

[project.scripts]
honeypot = "honeypot.run:main"

[dependency-groups]
dev = [
    "cryptography>=42.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
